blog/blog.css
body {
  background-color: #332826;
  color: rgba(255, 255, 255, .87);
  padding: 0 2%;
  margin-bottom: 200px;
}

code {
  font-family: monospace;
  white-space: nowrap;
}

pre > code {
  white-space: pre;
}

code, pre {
  background-color: #121212;
}

pre {
  border-radius: 10px;
  padding: 24px;
  white-space: pre;
}

strong {
  color: rgba(255, 255, 255, 1);
}

h1 {
  color: rgba(255, 200, 220, .92);
}

h2 {
  color: rgba(255, 200, 220, .92);
  padding: 0 4px;
}

p {
  padding: 0 8px;
  line-height: 1.5rem;
}

header {
  padding: 24px;
}

header > h1 {
  font-size: 24px;
}

a {
  color: inherit;
  text-decoration: inherit;
}
a:hover,:focus {
  color: #fff;
}
p > a {
  color: rgba(220, 200, 255, .92);
}

.username {
  color: #fff;
  font-family: monospace;
}

time {
  display: block;
  color: rgba(255, 255, 255, .6);
  padding: 0 4px;
  margin-top: -20px;
  margin-bottom: 20px;
}

.tags {
  list-style: none;
  display: flex;
  margin-top: -16px;
  margin-bottom: 24px;
  padding: 0;
}
.tags > li {
  margin: 0px 4px;
  padding: 4px;
  border-radius: 8px;
  background-color: #121212;
}

@media only screen and (min-width: 768px) {
  body {
    padding: 0 25%;
  }
}

